fix overflow bug in filter panel

--- a/packages/web/src/app/globals.css
+++ b/packages/web/src/app/globals.css
@@ -129,3 +129,13 @@
     @apply bg-background text-foreground;
   }
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE dan Edge */
+  scrollbar-width: none; /* Firefox */
+}
